<resources>
    <string name="facebook_app_id">463811382101325</string>
    <string name="fb_login_protocol_scheme">fb463811382101325</string>
    <string name="facebook_client_token">f913b02ce2b2902a68ef106fe85761ab</string>

    <string name="app_name">BookHub</string>
    <string name="home">Home</string>
    <string name="Favorite">Favorite</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="manage_book">Manage book</string>\
    <string name="request">Request</string>
    <string name="bookmark">Bookmark</string>
    <string name="day_night">Day/Night</string>
    <string name="create">Create</string>
    <string name="comicCoverPath"></string>
    <string name="chapter">Chapters</string>
    <string name="comment">Comment</string>
    <string name="bookName">Enter book name</string>
    <string name="markAsFavorite">Mark as favorite</string>
    <string name="bookSummary">Enter book Summary</string>
    <string name="bookAuthor">Enter author</string>
    <string name="bookRating">Book rating</string>
    <string name="recommend">Recommend</string>
    <string name="send">Send</string>
    <string name="create_book">Create</string>
    <string name="image">Image</string>
    <string name="update">Save</string>
    <string name="delete">Delete</string>
    <string name="upload_chapter">Upload chapter</string>
    <string name="save">Save</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="loading">Loading…</string>
    <string name="forgot_pass">FORGOT PASSWORD?</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="prize">Prize</string>

    <string name="accounts">Accounts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="update_account">Update Account</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="new_password">New Password</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_account_email_for_verification">Enter your account email for verification</string>
    <string name="my_prize">My Prize</string>
    <string name="change_password">Change Password</string>
    <string name="request_form">Request Form</string>
    <string name="chapterName">Chapter name</string>
    <string name="pagenumber">"Page "</string>
    <string name="PageNumber">Page</string>
    <string name="next_chapter">Next Chapter</string>
    <string name="my_account">My Account</string>
    <string name="request_list">Request List</string>
    <string name="request_detail">Request Detail</string>
    <string name="accept_request">Accept Request</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="download">Downloaded</string>

    <string name="request_title">Request Title</string>
    <string name="request_description">Request Description</string>
    <string name="checked">Checked:</string>
    <string name="request_by_user">Request By User</string>
    <string name="create_account">Create Account</string>
    <string name="edit_cover">Edit cover</string>
    <string name="searchResult">Search Result</string>
    <string name="or_log_in_with">Or, log in with:</string>
    <string name="check_your_requestlist">Check Your RequestList</string>
    <string name="status">Status:</string>
    <string name="pending">Pending...</string>
    <string name="date_of_request">Date Of Request</string>

    <string-array name="category_names">
        <item>Horror</item>
        <item>Romance</item>
        <item>Gore</item>
        <item>Comedy</item>
        <item>Adventure</item>
        <item>Fantasy</item>
        <item>Novel</item>
        <item>Harem</item>
        <item>Mystery</item>
        <item>Drama</item>

    </string-array>
    <string name="default_web_client_id" translatable="false">797774256464-2lcpevg7et4ig0fum6d3i3b92ch8hack.apps.googleusercontent.com</string>

</resources>