<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.Activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="#303030">


            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/bookhub_trans" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="37dp"
            android:layout_marginRight="62dp"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textSize="27sp"
            android:layout_gravity="center_horizontal">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="62dp"
            android:text="@string/enter_your_account_email_for_verification"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal">
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="27dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_border_rounded_cornwe">

            <!--INPUT-->
            <EditText
                android:id="@+id/emailETForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/detail_icon"
                android:background="@android:color/transparent"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <!--ICON-->
            <ImageView
                android:id="@+id/detail_icon"
                android:layout_width="15dp"
                android:layout_height="11dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/email" />
        </RelativeLayout>

        <TextView
            android:id="@+id/forgotConfirmBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="27dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/orange_fill__rounded_color"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>