<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppbarRequest"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/top_app_bar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_detail"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="62dp"
                android:text="@string/request_detail"
                android:textStyle="bold"
                android:textSize="27sp"
                android:layout_gravity="center_horizontal">

            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_by_user"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="65dp"
                    android:layout_marginBottom="10dp"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/black_border_rounded_cornwe">

                    <!--INPUT-->
                    <TextView
                        android:id="@+id/userID_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/username_icon"
                        android:background="@android:color/transparent"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!--ICON-->
                    <ImageView
                        android:id="@+id/username_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:src="@drawable/username_icon" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_title"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="65dp"
                    android:layout_marginBottom="10dp"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/black_border_rounded_cornwe">

                    <!--INPUT-->
                    <TextView
                        android:id="@+id/requestTitle_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/title_icon"
                        android:background="@android:color/transparent"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!--ICON-->
                    <ImageView
                        android:id="@+id/title_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:src="@drawable/title" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_description"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="65dp"
                    android:layout_marginBottom="10dp"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/black_border_rounded_cornwe">

                    <!--INPUT-->
                    <TextView
                        android:id="@+id/requestDetail_tv"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_toEndOf="@+id/detail_icon"
                        android:background="@android:color/transparent"
                        android:maxLines="5"
                        android:paddingStart="12dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!--ICON-->
                    <ImageView
                        android:id="@+id/detail_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:src="@drawable/interview" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/black_border_rounded_cornwe"/>



            <CheckBox
                android:id="@+id/checkbox_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/accept_request"/>

            <TextView
                android:id="@+id/doneBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="19dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/orange_fill__rounded_color"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/done"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>