<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    android:orientation="vertical">
    <RelativeLayout
        android:id ="@+id/avaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="125dp" android:id="@+id/avatar"
            android:layout_height="125dp"
            app:cardCornerRadius="250dp"
            app:cardBackgroundColor="@color/white">
            <androidx.cardview.widget.CardView
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:src="@drawable/doll_cover"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/avatar"
            android:orientation="vertical"
            android:id="@+id/line2">

            <EditText
                android:id="@+id/pf_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textAlignment="center"
                android:textColor="@color/darkred"
                android:textSize="35sp" />
            <RelativeLayout
                android:paddingLeft="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/avatar"
                android:orientation="horizontal"
                android:layout_toEndOf="@id/pf_username">

                <ImageView
                    android:id="@+id/img_badge"
                    android:layout_width="49dp"
                    android:layout_height="49dp"
                    android:paddingTop="9dp"
                    android:src="@drawable/badge" />

                <TextView
                    android:id="@+id/badge_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_badge"
                    android:paddingTop="16dp"
                    android:text="Badges:"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/badge_prize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/badge_tv"
                    android:paddingTop="16dp"
                    android:text="10"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/point_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_point"
                    android:paddingTop="16dp"
                    android:text="Points:"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/img_point"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_toRightOf="@id/badge_prize"
                    android:paddingTop="9dp"
                    android:src="@drawable/award" />

                <TextView
                    android:id="@+id/point_prize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/point_tv"
                    android:paddingTop="16dp"
                    android:text="1000"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id ="@+id/profileLayout"
        android:layout_marginBottom="@id/avaLayout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/history_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:src="@drawable/history" />

        <ImageView
            android:id="@+id/fav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/history_btn"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/rewards_button" />
    </RelativeLayout>

    <RelativeLayout
        android:id ="@+id/profileLayout2"
        android:layout_marginBottom="@id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/history_btn_tv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/history"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fav_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/history_btn_tv"
            android:paddingEnd="16dp"
            android:text="@string/Favorite"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id ="@+id/profileLayout3"
        android:layout_marginBottom="@id/profileLayout2"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pf_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:src="@drawable/view_profile_button" />

        <ImageView
            android:id="@+id/prize_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:layout_toRightOf="@id/pf_btn"
            android:src="@drawable/rw_btn" />
    </RelativeLayout>
    <RelativeLayout
        android:id ="@+id/profileLayout4"
        android:layout_marginBottom="@id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile_btn_tv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/prize_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/profile_btn_tv"
            android:paddingEnd="16dp"
            android:text="@string/prize"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/bookmark_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:src="@drawable/view_bookmarks_button"
        android:contentDescription="TODO" />
    <TextView
        android:id="@+id/bookmark_btn_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmark"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        />
</LinearLayout>