<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Controllers.Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="#303030">


            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/bookhub_trans" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="62dp"
            android:text="@string/login"
            android:textSize="27dp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_border_rounded_cornwe">

            <!--INPUT-->
            <EditText
                android:id="@+id/emailETLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/username_icon"
                android:background="@android:color/transparent"
                android:hint="Email"
                android:maxLines="1"
                android:paddingLeft="13dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <!--ICON-->
            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/email" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_border_rounded_cornwe">

            <!--INPUT-->
            <EditText
                android:id="@+id/passwordETLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/password_icon"
                android:background="@android:color/transparent"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <!--ICON-->
            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="15dp"
                android:layout_height="11dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/password" />
        </RelativeLayout>

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/black_fill__rounded_color"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_pass"
            android:textColor="#1566e0"
            android:textSize="11sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/remember_me"
            android:textColor="#303030"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/registerBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="62dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/orange_fill__rounded_color"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login"
                android:layout_width="190dp"
                android:layout_height="40dp" />
            <com.google.android.gms.common.SignInButton
                android:id="@+id/gmail_login"
                android:layout_width="190dp"
                android:layout_height="40dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>